# Quantum-Challenge-Grader

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml  requirements-jupyter.txt  requirements-local.txt  requirements-qiskit.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
qc_grader/: __init__.py  api.py  grade.py  util.py
qc_grader/challenges/: __init__.py  util.py
qc_grader/challenges/algo_queen_2023/: __init__.py  problem_set.py
qc_grader/challenges/algorithm_design/: __init__.py  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py
qc_grader/challenges/custom/: __init__.py  custom.py
qc_grader/challenges/fall_2021/: __init__.py  challenge1.py  challenge2.py  challenge3.py  challenge4.py
qc_grader/challenges/fall_2022/: __init__.py  lab1.py  lab2.py  lab3.py  lab4.py
qc_grader/challenges/fall_fest23/: __init__.py  lab_a.py  lab_b.py  lab_c.py
qc_grader/challenges/fall_fest24/: __init__.py  lab0.py  lab1.py  lab2.py  lab3.py  lab4.py  lab_bonus.py
qc_grader/challenges/fallfest_2026/: __init__.py  bell.py  dj.py  grovers.py  intro.py  qft.py  qkd.py  sg.py  shors.py  superposition.py  teleport.py  uncertainty.py  vqe.py
qc_grader/challenges/intro_practice_exam/: __init__.py  intro_practice_exam.py
qc_grader/challenges/iqc_2024/: __init__.py  lab0.py  lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  lab_bonus.py
qc_grader/challenges/programming_challenge_aus/: __init__.py  problem_set.py
qc_grader/challenges/qdc_2024/: __init__.py  day0.py  day1.py  day2.py  day3.py  eri.npy  n2_fci.txt  utils.py
qc_grader/challenges/qdc_2024_2/: __init__.py  day3.py  hcore.npy  nuclear_repulsion_energy.pkl
qc_grader/challenges/qdc_2025/: __init__.py  es60fst02.gph  lattice.py  qdc25_lab1.py  qdc25_lab2.py  qdc25_lab3.py  qdc25_lab4.py  qdc25_lab5.py  qdc25_lab6.py  qdc25_lab7.py  qdc25_lab8.py  qmoo_files.py
qc_grader/challenges/qgss_2022/: __init__.py  lab1.py  lab2.py  lab3.py  lab4.py
qc_grader/challenges/qgss_2023/: __init__.py  lab1.py  lab2.py  lab3.py  lab4.py  lab5.py
qc_grader/challenges/qgss_2024/: __init__.py  lab1.py  lab2.py  lab3.py  lab4-pre-baked-results.json  lab4.py  lab5.py  utils.py
qc_grader/challenges/qgss_2025/: __init__.py  lab0.py  lab1.py  lab2.py  lab3.py  lab4.py  qgss25_functions_labs.py  qgss25_lab1.py  qgss25_lab2.py  qgss25_lab3.py  qgss25_lab4.py
qc_grader/challenges/qgss_2026/: __init__.py  lab0.py  lab1.py  lab2.py  lab3.py  lab4a.py  lab4b.py  lab4b_test.py  lab4c.py
qc_grader/challenges/quantum_explorers23/: __init__.py  badge_1.py  badge_2.py  badge_3.py  badge_4.py  badge_5.py  badge_6.py  badge_7.py
qc_grader/challenges/r2p_2026/: lab2.py
qc_grader/challenges/r2p_2026_canada/: __init__.py  lab2.py  lab_hadron.py  lab_qmoo.py  lab_skqd.py  lab_sqd.py
qc_grader/challenges/r2p_2026_us/: __init__.py  lab2.py  lab_hadron.py  lab_qmoo.py  lab_skqd.py  lab_sqd.py
qc_grader/challenges/spring_2022/: __init__.py  exercise1.py  exercise2.py  (+2 more)
qc_grader/common/: __init__.py  deserializer.py  serializer.py
qc_grader/custom_encoder/: __init__.py  json.py  json_encoder.py  json_encoder_test.py  serializer.py
qc_grader/exercises/: __init__.py  week1.py  week2.py  week3.py
qc_grader/grader/: __init__.py  api.py  auth.py  common.py  env.py  grade.py  grade_test.py
qc_grader/qatutorial/: LCU.py  __init__.py  adders.py  bell_states.py  grovers.py  hadamard_test.py  module_1.py  module_2.py  module_3.py  module_4.py  module_5.py  office_hours.py  operators.py  qft.py  qpe.py  runtime.py  swaptest.py  vqe.py
qc_grader/utilities/: graph_util.py
qc_grader_json/: custom_decoder.py  custom_encoder.py
tests/: testsdecoder.py  testsencoder.py
(+68 files in other folders)
