[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qc_grader"
dynamic = ["version"]
description = "Grading client for the IBM Quantum Challenge"
license = { text = "Apache-2.0" }
authors = [
    { name = "IBM Quantum Community Team" },
]
keywords = ["qiskit", "quantum", "challenge", "grader"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "typeguard",
    "requests",
    "networkx",
    "ibm-platform-services",
    "moocore",
]

[project.urls]
Homepage = "https://quantum.cloud.ibm.com/"

[project.optional-dependencies]
qiskit = [
    "qiskit[visualization]>=2.1.0,<3.0",
    "qiskit-ibm-runtime",
    "qiskit-aer",
]
jupyter = [
    "jupyterlab",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.hatch.version]
path = "qc_grader/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = ["**/*_test.py"]

[tool.pytest.ini_options]
testpaths = ["qc_grader"]
