[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qc_grader"
dynamic = ["version"]
description = "Grading client for the IBM Quantum Challenge"
license = { text = "Apache-2.0" }
authors = [
    { name = "IBM Quantum Community Team" },
]
keywords = ["qiskit", "quantum", "challenge", "grader"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "typeguard",
    "requests",
    "ibm-platform-services",
    "networkx",
    "qiskit>=2.3.0,<3.0",
    "qiskit-ibm-runtime",

    # Dependencies our challenges use. You can remove these
    # when removing old challenges if they're no longer used.
    "moocore",
]

[project.urls]
Homepage = "https://quantum.cloud.ibm.com/"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.hatch.version]
path = "qc_grader/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = ["**/*_test.py"]

[tool.pytest.ini_options]
testpaths = ["qc_grader"]
